--- a/static/application.css
+++ b/static/application.css
@@ -1,5 +1,5 @@
 body {
-	background: #002B36;
+	background: #1a1a1a;
 	padding: 20px 50px;
 	margin: 0px;
 }
@@ -65,11 +65,11 @@ textarea {
 #box1 {
 	padding: 5px;
 	text-align: center;
-	background: #00222b;
+	background: #141414;
 }
 
 #box2 {
-	background: #08323c;
+	background: #2c2c2c;
 	font-size: 0px;
 	padding: 0px 5px;
 }
@@ -115,7 +115,7 @@ textarea {
 }
 
 #box3, #messages li {
-	background: #173e48;
+	background: #2c2c2c;
 	font-family: Helvetica, sans-serif;
 	font-size: 12px;
 	line-height: 14px;
@@ -164,7 +164,7 @@ textarea {
 }
 
 #messages li {
-	background:rgba(23,62,72,0.8);
+	background: #2c2c2c;
 	margin:0 auto;
 	list-style:none;
 }
