--- a/static/solarized_dark.css
+++ b/static/solarized_dark.css
@@ -8,7 +8,7 @@ Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmai
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #002b36;
+  background: #1a1a1a;
   color: #839496;
 }
 
@@ -72,7 +72,7 @@ Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmai
 }
 
 .hljs-formula {
-  background: #073642;
+  background: #1a1a1a;
 }
 
 .hljs-emphasis {
